# BAPred

./: .env.example  .gitignore  .pypirc.template  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  inf.py  inference.py  pyproject.toml  requirements.txt  run_inference.py  setup.py
.github/workflows/: ci.yml  publish.yml
bapred/: cli.py  inference.py  logger.py
bapred/data/: atom_feature.py  data.py  utils.py
bapred/model/: MHA.py
data/: data.py
data/.ipynb_checkpoints/: data-checkpoint.py
example/: ligands.sdf  result.csv  result.tsv  run.sh
model/: GatedGCNLSPE.py  GraphGPS.py  model.py
scripts/: build_package.sh
tests/: __init__.py  test_inference.py
