[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bapred"
version = "1.0.0"
description = "Protein-ligand Binding Affinity Prediction using Graph Neural Networks"
readme = "README.md"
authors = [
    {name = "Jaemin Sim", email = "your-email@example.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["protein", "ligand", "binding-affinity", "drug-discovery", "machine-learning", "graph-neural-network", "computational-biology", "cheminformatics"]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "dgl>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.60.0",
    "rdkit>=2023.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "pillow>=9.0.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/eightmm/BAPred"
Documentation = "https://github.com/eightmm/BAPred#readme"
Repository = "https://github.com/eightmm/BAPred.git"
Issues = "https://github.com/eightmm/BAPred/issues"

[project.scripts]
bapred = "bapred.cli:main"

[tool.setuptools]
packages = ["bapred", "bapred.data", "bapred.model"]
include-package-data = true

[tool.setuptools.package-data]
bapred = ["weight/*.pth"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=bapred --cov-report=html --cov-report=term"